# DEEPBLUE

GMM/hw_ch5/: CMakeLists.txt
GMM/hw_ch5/src/: gmm.cpp  gmm.h  motion_seg.cpp  motion_seg.h
GMM/hw_ch5/test/: test_motion_seg.cpp
chan_verse/CppCode/src/: height_map.cpp  height_map.h  level_set_lbf.cpp  level_set_utils.cpp  level_set_utils.h
chan_verse/CppCode/test/: test_cv.cpp  test_height_map.cpp  test_lbf.cpp
chan_verse/CppCode/utils/: display.cpp
graph_cut/hw_ch4/: CMakeLists.txt
graph_cut/hw_ch4/src/: CMakeLists.txt  graph.cpp  graph.h  graph_cut.cpp  graph_cut.h  image_graph.cpp  image_graph.h  interaction_tool.cpp  interaction_tool.h
graph_cut/hw_ch4/test/: CMakeLists.txt  test_graph_cut.cpp
graph_cut/hw_ch4/utils/: CMakeLists.txt  display.cpp  display.h  distribution.cpp  distribution.h  em.cpp  em.h  gmm.cpp  gmm.h  opencv_utils.cpp  opencv_utils.h
gvf_snake/ch2_hw/: CMakeLists.txt
gvf_snake/ch2_hw/include/: gradient_descent_base.h  gvf.h
gvf_snake/ch2_hw/src/: gradient_descent_base.cpp  gvf.cpp  snake.cpp  test_gvf.cpp  test_snake.cpp  use_graddescent.cpp
kmeans/: k_means.cpp
